[package]
name = "nt4-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parking_lot = "0.12"
futures-util = "0.3.25"
thiserror = "1.0.38"
rand = "0.8.5"
rmp = { version = "0.8" }
rmp-serde = { version = "1.1.1" }
rmpv = { version = "1.0", features = ["with-serde"] }
tokio-tungstenite = { version = "0.21.0" }
tokio = { version = "1", features = ["full"] }
no-panic = "0.1"